// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout given project page should render with go back button 1`] = `
<body>
  <div>
    <div
      class="z-10 flex min-h-screen items-start justify-center gap-8 bg-slate-50 py-16 px-8  dark:bg-neutral-900"
    >
      <div
        class="sticky top-16 w-64 border-2 border-neutral-200 bg-slate-50 p-4 shadow-sm dark:border-neutral-800 dark:bg-neutral-900 dark:shadow-md"
      >
        <div
          class="mt-2 flex flex-col items-center gap-4"
        >
          <div
            class="relative flex h-16 w-16 items-center justify-center rounded-full bg-slate-100 text-2xl dark:bg-neutral-800/70"
          >
            <span
              class="dark:text-neutral-200"
            >
              rk
            </span>
          </div>
          <div
            class="text-center"
          >
            <h1
              class="text-xl font-medium dark:text-neutral-200"
            >
              Radivoje Katanic
            </h1>
            <h3
              class="text-lg text-neutral-400"
            >
              Software Developer
            </h3>
          </div>
          <div
            class="flex justify-center gap-6"
          >
            <a
              href="https://github.com/rkatanic"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="stroke-neutral-400 hover:stroke-sky-500 dark:hover:stroke-sky-400"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
                />
              </svg>
            </a>
            <a
              href="https://www.linkedin.com/in/radivoje-katanic/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="stroke-neutral-400 hover:stroke-sky-500 dark:hover:stroke-sky-400"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
                />
                <rect
                  height="12"
                  width="4"
                  x="2"
                  y="9"
                />
                <circle
                  cx="4"
                  cy="4"
                  r="2"
                />
              </svg>
            </a>
            <a
              href="mailto:rkatanic@outlook.com"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="stroke-neutral-400 hover:stroke-sky-500 dark:hover:stroke-sky-400"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
                />
                <polyline
                  points="22,6 12,13 2,6"
                />
              </svg>
            </a>
          </div>
        </div>
        <hr
          class="my-4 dark:border-neutral-800"
        />
        <div>
          <span
            class="text-neutral-400 hover:text-neutral-900 dark:hover:text-neutral-200 flex items-center gap-3 py-2 px-3 font-medium"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            About
          </span>
          <span
            class="bg-sky-500 dark:text-neutral-50 flex items-center gap-3 py-2 px-3 font-medium"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M0 0H24V24H0z"
                  fill="none"
                />
                <path
                  d="M16 2v2h-1v3.243c0 1.158.251 2.301.736 3.352l4.282 9.276c.347.753.018 1.644-.734 1.99-.197.092-.411.139-.628.139H5.344c-.828 0-1.5-.672-1.5-1.5 0-.217.047-.432.138-.629l4.282-9.276C8.749 9.545 9 8.401 9 7.243V4H8V2h8zm-2.612 8.001h-2.776c-.104.363-.23.721-.374 1.071l-.158.361L6.125 20h11.749l-3.954-8.567c-.214-.464-.392-.943-.532-1.432zM11 7.243c0 .253-.01.506-.029.758h2.058c-.01-.121-.016-.242-.021-.364L13 7.243V4h-2v3.243z"
                />
              </g>
            </svg>
            Labs
          </span>
        </div>
      </div>
      <div
        class="z-10 flex gap-8"
      >
        <div
          class="w-full max-w-xl"
        >
           
          <div>
            children
          </div>
        </div>
        <div
          class="sticky top-16 flex h-full flex-col gap-3"
        >
          <button
            class="group relative flex h-10 w-10 items-center justify-center border-2 border-neutral-200 bg-slate-50 shadow-sm hover:border-sky-500 hover:bg-sky-500 dark:border-neutral-800 dark:bg-neutral-900 dark:shadow-md dark:hover:border-sky-500 dark:hover:bg-sky-500"
            type="button"
          >
            <svg
              class="fill-neutral-400 group-hover:fill-neutral-900 dark:group-hover:fill-white"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2V4a8 8 0 1 0 0 16z"
                />
              </g>
            </svg>
            <div
              class="pointer-events-none absolute left-[3.25rem] whitespace-nowrap border-2 border-neutral-300 bg-slate-50 px-2 py-0.5 text-sm font-medium text-neutral-500 opacity-0 shadow-sm transition-opacity duration-300 group-hover:opacity-100 dark:border-neutral-700 dark:bg-neutral-800 dark:text-neutral-300 dark:shadow-xl"
            >
              <svg
                class="absolute -left-2.5 top-1/2 -translate-y-1/2 fill-neutral-300 dark:fill-neutral-600"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 6 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 2L0 8l6 6V2z"
                  fill-rule="evenodd"
                />
              </svg>
              Theme
            </div>
          </button>
          <button
            class="group relative flex h-10 w-10 items-center justify-center border-2 border-neutral-200 bg-slate-50 shadow-sm hover:border-sky-500 hover:bg-sky-500 dark:border-neutral-800 dark:bg-neutral-900 dark:shadow-md dark:hover:border-sky-500 dark:hover:bg-sky-500"
            type="button"
          >
            <svg
              class="stroke-neutral-400 group-hover:stroke-neutral-900 dark:group-hover:stroke-white"
              data-testid="go-back-icon"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <desc />
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M9 13l-4 -4l4 -4m-4 4h11a4 4 0 0 1 0 8h-1"
              />
            </svg>
            <div
              class="pointer-events-none absolute left-[3.25rem] whitespace-nowrap border-2 border-neutral-300 bg-slate-50 px-2 py-0.5 text-sm font-medium text-neutral-500 opacity-0 shadow-sm transition-opacity duration-300 group-hover:opacity-100 dark:border-neutral-700 dark:bg-neutral-800 dark:text-neutral-300 dark:shadow-xl"
            >
              <svg
                class="absolute -left-2.5 top-1/2 -translate-y-1/2 fill-neutral-300 dark:fill-neutral-600"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 6 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 2L0 8l6 6V2z"
                  fill-rule="evenodd"
                />
              </svg>
              Go Back
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Layout should render 1`] = `
<body>
  <div>
    <div
      class="z-10 flex min-h-screen items-start justify-center gap-8 bg-slate-50 py-16 px-8  dark:bg-neutral-900"
    >
      <div
        class="sticky top-16 w-64 border-2 border-neutral-200 bg-slate-50 p-4 shadow-sm dark:border-neutral-800 dark:bg-neutral-900 dark:shadow-md"
      >
        <div
          class="mt-2 flex flex-col items-center gap-4"
        >
          <div
            class="relative flex h-16 w-16 items-center justify-center rounded-full bg-slate-100 text-2xl dark:bg-neutral-800/70"
          >
            <span
              class="dark:text-neutral-200"
            >
              rk
            </span>
          </div>
          <div
            class="text-center"
          >
            <h1
              class="text-xl font-medium dark:text-neutral-200"
            >
              Radivoje Katanic
            </h1>
            <h3
              class="text-lg text-neutral-400"
            >
              Software Developer
            </h3>
          </div>
          <div
            class="flex justify-center gap-6"
          >
            <a
              href="https://github.com/rkatanic"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="stroke-neutral-400 hover:stroke-sky-500 dark:hover:stroke-sky-400"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
                />
              </svg>
            </a>
            <a
              href="https://www.linkedin.com/in/radivoje-katanic/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="stroke-neutral-400 hover:stroke-sky-500 dark:hover:stroke-sky-400"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
                />
                <rect
                  height="12"
                  width="4"
                  x="2"
                  y="9"
                />
                <circle
                  cx="4"
                  cy="4"
                  r="2"
                />
              </svg>
            </a>
            <a
              href="mailto:rkatanic@outlook.com"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                class="stroke-neutral-400 hover:stroke-sky-500 dark:hover:stroke-sky-400"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
                />
                <polyline
                  points="22,6 12,13 2,6"
                />
              </svg>
            </a>
          </div>
        </div>
        <hr
          class="my-4 dark:border-neutral-800"
        />
        <div>
          <span
            class="text-neutral-400 hover:text-neutral-900 dark:hover:text-neutral-200 flex items-center gap-3 py-2 px-3 font-medium"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            About
          </span>
          <span
            class="text-neutral-400 hover:text-neutral-900 dark:hover:text-neutral-200 flex items-center gap-3 py-2 px-3 font-medium"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M0 0H24V24H0z"
                  fill="none"
                />
                <path
                  d="M16 2v2h-1v3.243c0 1.158.251 2.301.736 3.352l4.282 9.276c.347.753.018 1.644-.734 1.99-.197.092-.411.139-.628.139H5.344c-.828 0-1.5-.672-1.5-1.5 0-.217.047-.432.138-.629l4.282-9.276C8.749 9.545 9 8.401 9 7.243V4H8V2h8zm-2.612 8.001h-2.776c-.104.363-.23.721-.374 1.071l-.158.361L6.125 20h11.749l-3.954-8.567c-.214-.464-.392-.943-.532-1.432zM11 7.243c0 .253-.01.506-.029.758h2.058c-.01-.121-.016-.242-.021-.364L13 7.243V4h-2v3.243z"
                />
              </g>
            </svg>
            Labs
          </span>
        </div>
      </div>
      <div
        class="z-10 flex gap-8"
      >
        <div
          class="w-full max-w-xl"
        >
           
          <div>
            children
          </div>
        </div>
        <div
          class="sticky top-16 flex h-full flex-col gap-3"
        >
          <button
            class="group relative flex h-10 w-10 items-center justify-center border-2 border-neutral-200 bg-slate-50 shadow-sm hover:border-sky-500 hover:bg-sky-500 dark:border-neutral-800 dark:bg-neutral-900 dark:shadow-md dark:hover:border-sky-500 dark:hover:bg-sky-500"
            type="button"
          >
            <svg
              class="fill-neutral-400 group-hover:fill-neutral-900 dark:group-hover:fill-white"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2V4a8 8 0 1 0 0 16z"
                />
              </g>
            </svg>
            <div
              class="pointer-events-none absolute left-[3.25rem] whitespace-nowrap border-2 border-neutral-300 bg-slate-50 px-2 py-0.5 text-sm font-medium text-neutral-500 opacity-0 shadow-sm transition-opacity duration-300 group-hover:opacity-100 dark:border-neutral-700 dark:bg-neutral-800 dark:text-neutral-300 dark:shadow-xl"
            >
              <svg
                class="absolute -left-2.5 top-1/2 -translate-y-1/2 fill-neutral-300 dark:fill-neutral-600"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 6 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 2L0 8l6 6V2z"
                  fill-rule="evenodd"
                />
              </svg>
              Theme
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
